--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-# Core dependencies
-google-generativeai>=0.3.0
+# Core dependencies - UPDATED
+google-genai>=0.3.0  # NEW SDK instead of google-generativeai
 gtts>=2.3.0
 requests>=2.28.0
 python-dotenv>=0.19.0
